Revision history for HTTP-OAI

{{$NEXT}}

4.07  2018-05-28 15:14:54 CEST
  - Fixing counting number of tests
  - Fixed adding XSLT stylesheet process instructions #4

4.06  2017-09-01 07:55:01 CEST
  - Fixed metadataPrefix unreserved characters bugs [sdt]

4.05  2017-07-15 10:19:45 CEST
  - Fixing 5.26 installs
  - Fixing installation of command line tools

4.04  2017-01-19 10:06:11 CET
  - Moving to Dist::Milla [phochste]
  - Fixed Test t/getrecord.t fails [phochste]
  - Fixing pod [phochste]

4.03
  - Fixed MANIFEST [phochste]

4.02
  - Fixed namespace issue with ResumptionToken.pm [sebastfr]

4.01
	- Reworked API to use DocumentFragments
	- Various speed improvements
	- Added bin/oai_pmh.pl CLI tool

3.28
	- Fixed parsing <description> elements that contain multiple child nodes

3.26
	- Added 'delay' option to delay between requests
	- Added --skip-identify option to oai_browser.pl
	- Fixed POD for RT #64077
	- Hopefully fixes #69337 (no test case given)
	- Bumped XML::SAX::Base to 1.04 which should fix #68907

3.25
	- Added unit test for OAI_DC metadata() parsing
	- Metadata::OAI_DC now parses dc when passed as a DOM to ->metadata

3.24
	- Fixed CPAN bugs #60760 and #60856

3.23
	- Changed license to BSD
	- Added dependency for XML::SAX rt #43287
	- Fixed some POD issues rt #51853

3.22
	- use XML::SAX::Parser rather than ParserFactory
	- test the namespace on NamespaceURI rather than the XMLNS attribute, which
	  is reported differently between XML::LibXML::SAX and
	  XML::LibXML::SAX::Parser
	- added debug class HTTP::OAI::Debug
	- added check in 01parse test case for file open
	- added 000xml_sax.pl test case for basic XML::SAX function
	- added "trace" and "saxtrace" options to oai_browser.pl

3.21
	- added test case for bad characters
	- fix bad chars as they arrive, to avoid buffering an entire response if it
	  contains bad chars
	- some code cleanup

3.20
	- use strict UTF-8 (suggested by Dennis Vierkant)

3.19

3.18