@@ -1,7 +1,8 @@
 Revision history for HTTP-OAI
 
 {{$NEXT}}
-
+  - Fixing passing DOM to HTTP::OAI::Metadata
+  
 4.07  2018-05-28 15:14:54 CEST
   - Fixing counting number of tests
   - Fixed adding XSLT stylesheet process instructions #4
